<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_login"
        android:icon="@drawable/ic_login"
        android:title="@string/login" />

    <item
        android:id="@+id/nav_registration"
        android:icon="@drawable/ic_registration"
        android:title="@string/registration" />
    <item
        android:id="@+id/nav_djstatistics"
        android:icon="@drawable/ic_dj_statistics"
        android:title="@string/dj_statitistics" />
        <!-- android:icon="@drawable/ic_dj_statistics" -->
    <item
        android:id="@+id/nav_addgigs"
        android:icon="@drawable/ic_add_gig"
        android:title="@string/add_gig" />
    <!-- android:icon="@drawable/ic_add_gigs" -->
    <item
        android:id="@+id/nav_my_profile"
        android:title="@string/my_profile"
        android:icon="@drawable/ic_baseline_account_circle_24" />
</menu>