<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:layout_marginBottom="58dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="12dp">

        <ImageView
            android:id="@+id/ivIconUserUpdateTitle"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/personal_details_icon"
            android:src="@drawable/ic_baseline_account_login" />

        <TextView
            android:id="@+id/tvPersonalDetailsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/personal_details"
            android:textColor="@color/blue_primary"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/unesite_korisnicko_ime"
        android:textColorHint="#90FFFFFF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_border"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:minHeight="55dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/unesite_ime_prezime"
        android:textColorHint="#90FFFFFF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFirstLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_border"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:minHeight="55dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/unesite_mail"
        android:textColorHint="#90FFFFFF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_border"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:minHeight="55dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/nova_lozinka"
        android:textColorHint="#90FFFFFF"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_border"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:minHeight="55dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSaveChanges"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/blue_primary"
        android:padding="10dp"
        android:text="@string/spremi_promjene"
        android:textSize="20sp"
        app:cornerRadius="10dp"/>

</LinearLayout>