<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <ImageView
            android:id="@+id/ivIkonaPrijava"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="90dp"
            android:src="@drawable/ic_baseline_account_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etUsernamePrijava"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/text_border"
            android:ems="10"
            android:padding="12dp"
            android:hint="@string/unesite_korisnicko_ime"
            android:autofillHints="testdj"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:minHeight="55dp"
            android:textColorHint="#90FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivIkonaPrijava" />

        <EditText
            android:id="@+id/etPasswordPrijava"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:autofillHints="testdj"
            android:background="@drawable/text_border"
            android:ems="10"
            android:padding="12dp"
            android:hint="@string/unesite_lozinku"
            android:inputType="textPassword"
            android:minHeight="55dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textColorHint="#90FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etUsernamePrijava" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPrijava"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:backgroundTint="@color/blue_primary"
            android:padding="10dp"
            app:cornerRadius="10dp"
            android:textSize="20sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/prijavi_se"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPasswordPrijava" />

        <TextView
            android:id="@+id/tvRegistracijaLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="17sp"
            android:textColor="@color/blue_primary"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/prijava_reg_link"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnPrijava" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
