<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_background"
    tools:context=".DJStatisticsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:background  ="@color/blue_primary"
            android:title="@string/statistics"
            android:titleTextColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvStatistikaNaslov"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/statistics"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="@id/toolbar"
            app:layout_constraintEnd_toEndOf="@id/toolbar" />

        <EditText
            android:id="@+id/et_dj_statistics_start_date"
            android:layout_width="250dp"
            android:layout_height="42dp"
            android:background="@drawable/text_border"
            android:elevation="4dp"
            android:hint="Odaberite početni datum"
            android:inputType="date"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="#90FFFFFF"
            android:layout_marginTop="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStatistikaNaslov" />

        <EditText
            android:id="@+id/et_dj_statistics_end_date"
            android:layout_width="250dp"
            android:layout_height="42dp"
            android:background="@drawable/text_border"
            android:elevation="4dp"
            android:hint="Odaberite završni datum"
            android:inputType="date"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="#90FFFFFF"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_dj_statistics_start_date" />

        <androidx.cardview.widget.CardView
            android:id="@+id/statisticsCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            app:cardCornerRadius="22dp"
            app:cardElevation="8dp"
            android:backgroundTint="@color/blue_primary"
            app:layout_constraintTop_toBottomOf="@id/et_dj_statistics_end_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tv_dj_statistics_gig_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gigCount"
                    android:textSize="20sp"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tv_dj_statistics_zarada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/totalEarnings"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="8dp" />

                <TextView
                    android:id="@+id/tv_dj_statistics_gig_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mostCommonGigType"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="8dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGenerirajPdf"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/blue_primary"
            android:padding="10dp"
            app:cornerRadius="10dp"
            android:textSize="20sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/generatePdf"
            app:layout_constraintTop_toBottomOf="@id/statisticsCard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
