<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DJMyProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/llDJPersonalDetailsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:layout_marginBottom="38dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:id="@+id/ivIconDJPersonalDetailsTitle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/personal_details_icon"
                android:src="@drawable/ic_baseline_account_login" />

            <TextView
                android:id="@+id/tvDJPersonalDetailsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/my_profile"
                android:textColor="@color/blue_primary"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/blue_primary"/>
        <LinearLayout
            android:id="@+id/llDJPersonalDetailsRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="11dp"
            android:layout_marginTop="11dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:id="@+id/ivIconDJPersonalDetails"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/personal_details_icon"
                android:src="@drawable/ic_baseline_account_login" />

            <TextView
                android:id="@+id/tvDJPersonalDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/personal_details"
                android:textColor="@color/blue_primary"
                android:textSize="22sp" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/blue_primary"/>

        <LinearLayout
            android:id="@+id/llProfileReviewsRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="11dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:id="@+id/ivIconReview"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/profile_element_reviews"
                android:src="@drawable/ic_baseline_checklist_24" />

            <TextView
                android:id="@+id/tvProfileTitleReviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/profile_element_reviews"
                android:textColor="@color/blue_primary"
                android:textSize="22sp" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/blue_primary"/>
        <LinearLayout
            android:id="@+id/llSettingsRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="11dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginTop="11dp"
            android:padding="12dp">

            <ImageView
                android:id="@+id/ivIconSettings"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/profile_element_reviews"
                android:src="@drawable/ic_baseline_settings" />

            <TextView
                android:id="@+id/tvSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/settings"
                android:textColor="@color/blue_primary"
                android:textSize="22sp" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/blue_primary"/>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>